--- a/analiseficha.html
+++ b/analiseficha.html
@@ -83,9 +83,10 @@ body.modal-open{
 /* =========================================================
    GRID PRINCIPAL
 ========================================================= */
+/* DESKTOP — 6 cards por linha */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(340px,1fr));
+  grid-template-columns:repeat(6, 1fr);
   gap:22px;
   padding:22px;
 }
