--- a/analiseficha.html
+++ b/analiseficha.html
@@ -157,8 +157,8 @@ body.modal-open{
 ========================================================= */
 .modal-box{
   background:#fff;
-  width:100%;
-  max-width:880px;
+  width:96vw;
+  max-width:1200px;   /* ← aumenta bastante o espaço */
   max-height:92vh;
   border-radius:26px;
   overflow:hidden;
@@ -194,7 +194,7 @@ body.modal-open{
    CORPO MODAL
 ========================================================= */
 .modal-body{
-  padding:26px;
+  padding:32px 34px;  /* mais confortável */
   overflow-y:auto;
 }
 
@@ -436,16 +436,16 @@ button{
 ========================================================= */
 .modal-header{
   display:grid;
-  grid-template-columns:280px 1fr;
-  gap:18px;
-  padding:18px;
+  grid-template-columns:340px 1fr; /* imagem maior */
+  gap:22px;
+  padding:22px 26px;
   border-bottom:1px solid var(--border);
 }
 
 .modal-left{
-  border-radius:20px;
+  border-radius:22px;
   overflow:hidden;
-  box-shadow:var(--shadow-md);
+  box-shadow:0 20px 50px rgba(0,0,0,.25);
   background:#000;
 }
 
@@ -466,8 +466,9 @@ button{
 
 .modal-main h2{
   margin:0;
-  font-size:28px;
+  font-size:34px;
   font-weight:900;
+  letter-spacing:-.02em;
 }
 
 .modal-main .badges{
@@ -484,7 +485,29 @@ button{
     height:180px;
   }
 }
+/* Layout em 2 colunas no desktop */
+@media(min-width:1024px){
+  .modal-body{
+    display:grid;
+    grid-template-columns:1fr 1fr;
+    gap:28px;
+  }
 
+  .modal-body > h3,
+  .modal-body > hr{
+    grid-column:1 / -1;
+  }
+}
+
+
+
+
+
+
+
+
+
+   
 </style>
 </head>
 
