--- a/analiseficha.html
+++ b/analiseficha.html
@@ -194,8 +194,9 @@ body.modal-open{
    CORPO MODAL
 ========================================================= */
 .modal-body{
-  padding:32px 34px;  /* mais confortável */
+  padding:10px 4px 24px;
   overflow-y:auto;
+  max-height:calc(92vh - 220px); /* não estoura a tela */
 }
 
 .modal-body::-webkit-scrollbar{
@@ -460,8 +461,9 @@ button{
 .modal-main{
   display:flex;
   flex-direction:column;
-  justify-content:space-between;
-  padding:10px 4px;
+  gap:18px;
+  padding:10px 6px 18px;
+  overflow:hidden;
 }
 
 .modal-main h2{
@@ -523,21 +525,22 @@ button{
 
 <!-- MODAL -->
 <div id="modal" class="modal" onclick="fechar()">
-<div class="modal-box" onclick="event.stopPropagation()">
-  <span class="close" onclick="fechar()">✕</span>
+  <div class="modal-box" onclick="event.stopPropagation()">
+    <span class="close" onclick="fechar()">✕</span>
 
-  <div class="modal-header">
-    <div class="modal-left">
-      <img id="mFoto" class="modal-img">
-    </div>
+    <div class="modal-header">
+      <div class="modal-left">
+        <img id="mFoto" class="modal-img">
+      </div>
 
-    <div class="modal-main">
-      <div id="mHeader"></div>
+      <div class="modal-main">
+        <div id="mHeader"></div>
+
+        <!-- CONTEÚDO VAI PRAQUI -->
+        <div id="mBody" class="modal-body"></div>
+      </div>
     </div>
   </div>
-
-  <div id="mBody" class="modal-body"></div>
-</div>
 </div>
 
 <script>
