--- a/analiseficha.html
+++ b/analiseficha.html
@@ -301,13 +301,14 @@ body.modal-open{
   display:grid;
   grid-template-columns:1fr auto auto;
   gap:14px;
-  padding:12px 4px;
-  border-bottom:1px dashed var(--border);
+  padding:10px;
+  border:1px solid var(--border);
+  border-radius:10px;
   font-size:14px;
   align-items:center;
+  margin-bottom:8px;
+  background:#fff;
 }
-
-.ing:last-child{ border-bottom:none }
 
 .ing b{ font-weight:800 }
 .ing small{ color:var(--muted) }
@@ -316,11 +317,10 @@ body.modal-open{
    PRECIFICAÇÃO
 ========================================================= */
 .precificacao{
-  background:
-    linear-gradient(180deg,#f8fafc,#eef2ff);
+  background:#f8fafc;
   border:1px solid var(--border);
-  border-radius:18px;
-  padding:16px;
+  border-radius:14px;
+  padding:14px;
   margin:16px 0;
   box-shadow:var(--shadow-xs);
 }
@@ -328,7 +328,7 @@ body.modal-open{
 /* =========================================================
    INPUTS / SELECTS
 ========================================================= */
-input, select{
+input, select, textarea{
   height:44px;
   border-radius:12px;
   border:1px solid var(--border);
@@ -339,7 +339,14 @@ input, select{
   background:#fff;
 }
 
-input:focus, select:focus{
+textarea{
+  height:auto;
+  min-height:70px;
+  padding:14px;
+  resize:vertical;
+}
+
+input:focus, select:focus, textarea:focus{
   outline:none;
   border-color:var(--primary);
   box-shadow:0 0 0 3px rgba(37,99,235,.18);
@@ -350,7 +357,7 @@ input[readonly]{
 }
 
 /* =========================================================
-   BOTÕES
+   BOTÕES (PADRÃO ÚNICO)
 ========================================================= */
 button{
   font-family:Inter,sans-serif;
@@ -358,7 +365,6 @@ button{
   cursor:pointer;
 }
 
-/* BOTÕES */
 .btn-add{
   height:44px;
   padding:0 18px;
@@ -377,7 +383,6 @@ button{
   box-shadow:0 10px 26px rgba(15,23,42,.35);
 }
 
-/* botões pequenos */
 .btn-icon{
   border-radius:8px;
   padding:6px 10px;
@@ -456,32 +461,6 @@ button{
 
   .btn-add{ width:100% }
 }
-
-
-/* Blocos visuais no modal */
-.modal-body > h3{
-  margin-top:28px;
-  padding-bottom:6px;
-  border-bottom:1px solid var(--border);
-}
-
-.precificacao{
-  background:#f8fafc;
-  border-radius:14px;
-  padding:14px;
-}
-
-.ing{
-  background:#fff;
-  border-radius:10px;
-  padding:10px;
-  border:1px solid var(--border);
-  margin-bottom:8px;
-}
-
-
-
-
    
 </style>
 </head>
